--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade active show" id="memory" role="tabpanel" aria-labelledby="memory-tab">
+                <div class="tab-pane fade active" id="memory" role="tabpanel" aria-labelledby="memory-tab">
                     <div class="row">
                         <div class="input-group col">
                             <div class="input-group-prepend">
